@@ -222,172 +222,6 @@ public class FollowTestSpeedController {
     }
 
 
-//    @PostMapping("measure")
-//    @Operation(summary = "测速")
-//    @PreAuthorize("hasAuthority('mascontrol:speed')")
-//    public Result<FollowTestSpeedVO> measure(@RequestBody @Valid MeasureRequestVO request, HttpServletRequest req) throws Exception {
-//        if (ObjectUtil.isEmpty(request.getServers()) || ObjectUtil.isEmpty(request.getVps())) {
-//            return Result.error("服务器列表或vps列表为空");
-//        }
-//        FollowTestSpeedVO overallResult = new FollowTestSpeedVO();
-//        overallResult.setStatus(VpsSpendEnum.IN_PROGRESS.getType());
-////        overallResult.setDoTime(new Date());
-//        overallResult.setDoTime(LocalDateTime.now());
-//        overallResult.setVersion(0);
-//        overallResult.setDeleted(0);
-//        overallResult.setCreator(SecurityUser.getUserId());
-//        overallResult.setCreateTime(LocalDateTime.now());
-//        overallResult.setTestName(SecurityUser.getUser().getUsername());
-//        followTestSpeedService.saveTestSpeed(overallResult);
-//        // 保存到 Redis
-//        String testId = overallResult.getId().toString();
-//        redisUtil.set("speed:"+testId + ":servers", objectMapper.writeValueAsString(request.getServers()));
-//        redisUtil.set("speed:"+testId + ":vps", objectMapper.writeValueAsString(request.getVps()));
-//        List<String> servers = request.getServers();
-//        List<String> vps = request.getVps();
-//
-//        extracted(req, vps, servers, overallResult);
-//        return Result.ok();
-//    }
-
-//    private void extracted(HttpServletRequest req, List<String> vps, List<String> servers, FollowTestSpeedVO overallResult) throws JsonProcessingException {
-//        List<FollowVpsEntity> vpsList = followVpsService.listByVpsName(vps);
-//        ObjectMapper objectMapper = new ObjectMapper();
-//        boolean allSuccess = true;
-//        FollowTestServerQuery query = new FollowTestServerQuery();
-//        List<FollowTestDetailVO> detailVOLists = followTestDetailService.selectServer(query);
-//        //将detailVOLists的数据存储在redis
-//        redisUtil.set(Constant.VPS_NODE_SPEED + "detail", detailVOLists);
-//
-//        ExecutorService executorService = Executors.newFixedThreadPool(10); // 创建固定大小的线程池
-//        List<Future<Boolean>> futures = new ArrayList<>(); // 存储每个任务的 Future 对象
-//
-//        for (FollowVpsEntity vpsEntity : vpsList) {
-//            //平台点击测速的时候，断开连接的VPS不需要发起测速请求
-//            try {
-//                InetAddress inet = InetAddress.getByName(vpsEntity.getIpAddress());
-//                boolean reachable = inet.isReachable(5000);
-//                if (!reachable) {
-//                    log.warn("VPS 地址不可达: " + vpsEntity.getIpAddress() + ", 跳过该VPS");
-//                    continue;
-//                }
-//                try (Socket socket = new Socket(vpsEntity.getIpAddress(), Integer.parseInt(FollowConstant.VPS_PORT))) {
-//                    log.info("成功连接到 VPS: " + vpsEntity.getIpAddress());
-//                } catch (IOException e) {
-//                    log.warn("VPS 服务未启动: " + vpsEntity.getIpAddress() + ", 跳过该VPS");
-//                    continue;
-//                }
-//            } catch (IOException e) {
-//                log.error("请求异常: " + e.getMessage() + ", 跳过该VPS");
-//                continue;
-//            }
-//
-//            futures.add(executorService.submit(() -> {
-//                try {
-//                    String url = MessageFormat.format("http://{0}:{1}{2}", vpsEntity.getIpAddress(), FollowConstant.VPS_PORT, FollowConstant.VPS_MEASURE);
-//
-//                    MeasureRequestVO startRequest = new MeasureRequestVO();
-//                    startRequest.setServers(servers);
-//                    startRequest.setVpsEntity(vpsEntity);
-//                    startRequest.setTestId(overallResult.getId());
-//                    startRequest.setMeasureTime(overallResult.getDoTime());
-//                    log.info("测试时间"+overallResult.getDoTime());
-//
-////                // 将对象序列化为 JSON
-////                String jsonBody = objectMapper.writeValueAsString(startRequest);
-////                RestTemplate restTemplate = new RestTemplate();
-////                HttpHeaders headers = RestUtil.getHeaderApplicationJsonAndToken(req);
-////                HttpEntity<String> entity = new HttpEntity<>(jsonBody, headers);
-////                ResponseEntity<JSONObject> response = restTemplate.exchange(url, HttpMethod.POST, entity, JSONObject.class);
-////                log.info("测速请求:" + response.getBody());
-//
-//                    // 手动序列化 FollowVpsEntity 中的 expiryDate 字段
-//                    String expiryDateStr = vpsEntity.getExpiryDate().toString();
-//                    startRequest.setExpiryDateStr(expiryDateStr);
-//
-//                    RestTemplate restTemplate = new RestTemplate();
-//                    HttpHeaders headers = RestUtil.getHeaderApplicationJsonAndToken(req);
-//                    HttpEntity<MeasureRequestVO> entity = new HttpEntity<>(startRequest, headers);
-//                    ResponseEntity<JSONObject> response = restTemplate.exchange(url, HttpMethod.POST, entity, JSONObject.class);
-//                    log.info("测速请求:" + response.getBody());
-//
-//
-//                    if (!response.getBody().getString("msg").equals("success")) {
-//                        log.error("测速失败ip: " + vpsEntity.getIpAddress());
-//                        return true; // 返回失败状态
-//                    }
-//                } catch (Exception e) {
-//                    log.error("请求异常: " + e.getMessage() + ", VPS异常");
-//                }
-//                return true; // 返回成功状态
-//
-//            }));
-//
-//        }
-//        // 等待所有任务完成并检查结果
-//        for (Future<Boolean> future : futures) {
-//            try {
-//                if (!future.get()) { // 如果有任何任务返回失败
-//                    allSuccess = false;
-//                    break;
-//                }
-//            } catch (InterruptedException | ExecutionException e) {
-//                log.error("测速任务执行异常: " + e.getMessage());
-//                allSuccess = false;
-//                break;
-//            }
-//        }
-//        // 根据所有任务的执行结果更新 overallResult
-//        if (allSuccess) {
-//            overallResult.setStatus(VpsSpendEnum.SUCCESS.getType());
-//
-//            /*
-//            List<FollowTestDetailEntity> allEntities = followTestDetailService.list(
-//                    new LambdaQueryWrapper<FollowTestDetailEntity>()
-//                            .eq(FollowTestDetailEntity::getTestId, overallResult.getId())
-//            );
-//            // 获取所有唯一的 VPS 名称
-//            List<String> vpsNames = allEntities.stream()
-//                    .map(FollowTestDetailEntity::getVpsName)
-//                    .distinct()
-//                    .collect(Collectors.toList());
-//
-//            vpsNames.forEach(vpsName -> {
-//                // 获取当前 VPS 名称下的所有服务器名称
-//                List<String> serverNames = allEntities.stream()
-//                        .filter(entity -> vpsName.equals(entity.getVpsName()))
-//                        .map(FollowTestDetailEntity::getServerName)
-//                        .distinct()
-//                        .collect(Collectors.toList());
-//                serverNames.forEach(serverName -> {
-//                    // 查找当前 VPS 名称和服务器名称下的最小延迟
-//                    FollowTestDetailEntity minLatencyEntity = allEntities.stream()
-//                            .filter(entity -> vpsName.equals(entity.getVpsName()) && serverName.equals(entity.getServerName()))
-//                            .min(Comparator.comparingLong(FollowTestDetailEntity::getSpeed))
-//                            .orElse(null);
-//
-//                    if (ObjectUtil.isNotEmpty(minLatencyEntity)) {
-//                        //查询vps名称所对应的id
-//                        Integer vpsId = followVpsService.getOne(new LambdaQueryWrapper<FollowVpsEntity>()
-//                                .eq(FollowVpsEntity::getName, vpsName)
-//                                .eq(FollowVpsEntity::getDeleted, 0)
-//                                .last("LIMIT 1")).getId();
-//                        redisUtil.hSet(Constant.VPS_NODE_SPEED + vpsId, serverName, minLatencyEntity.getServerNode(), 0);
-//                    }
-//                });
-//            });
-//            */
-//        } else {
-//            overallResult.setStatus(VpsSpendEnum.FAILURE.getType());
-//            // 延迟删除操作，确保在所有测速请求完成后再进行删除
-//            followTestDetailService.deleteByTestId(overallResult.getId());
-//        }
-//
-//        update(overallResult);
-//        executorService.shutdown(); // 关闭线程池
-//    }
-
-
     private boolean isVpsReachable(FollowVpsEntity vpsEntity) {
         try {
             InetAddress inet = InetAddress.getByName(vpsEntity.getIpAddress());
@@ -839,39 +673,89 @@ public class FollowTestSpeedController {
     @PostMapping("reconnectionServer")
     @Operation(summary = "重新连接服务器账号")
     @PreAuthorize("hasAuthority('mascontrol:speed')")
-    public Result<String> reconnectionServer(@RequestBody FollowTestServerVO followTestServerVO,HttpServletRequest req) {
-log.info("重新连接服务器账号:{}",req);
+//    public Result<String> reconnectionServer(@RequestBody FollowTestServerVO followTestServerVO,HttpServletRequest req) {
+//    log.info("重新连接服务器账号:{}",req);
+//        followTestServerVO.getVpsNameList().forEach(vps -> {
+////            Optional<FollowVpsEntity> vpsEntityOptional = followVpsService.list().stream()
+////                    .filter(vpsEntity -> vpsEntity.getName().equals(vps) && vpsEntity.getDeleted() == 0)
+////                    .findFirst();
+//            //根据名称查询 IP 地址
+//            LambdaQueryWrapper<FollowVpsEntity> queryWrapper = new LambdaQueryWrapper<>();
+//            queryWrapper.eq(FollowVpsEntity::getName, vps);
+//            queryWrapper.eq(FollowVpsEntity::getDeleted, 0);
+//            List<FollowVpsEntity> vpsEntityOptionals = followVpsService.list(queryWrapper);
+//            if (ObjectUtil.isNotEmpty(vpsEntityOptionals)){
+//
+//            FollowVpsEntity vpsEntityOptional = vpsEntityOptionals.getFirst();
+//            log.info("vpsEntityOptional:{}", vpsEntityOptional);
+//            if (ObjectUtil.isNotEmpty(vpsEntityOptional)) {
+//                String url = MessageFormat.format("http://{0}:{1}{2}", vpsEntityOptional.getIpAddress(), FollowConstant.VPS_PORT, FollowConstant.VPS_RECONNECTION);
+//                String serverName = followTestServerVO.getServerName();
+//                RestTemplate restTemplate = new RestTemplate();
+//                HttpHeaders headers = RestUtil.getHeaderApplicationJsonAndToken(req);
+//                HttpEntity<String> entity = new HttpEntity<>(serverName, headers);
+//                ResponseEntity<JSONObject> response = restTemplate.exchange(url, HttpMethod.POST, entity, JSONObject.class);
+//                log.info("测速请求:" + response.getBody());
+//
+//                if (!response.getBody().getString("msg").equals("success")) {
+//                    log.error("测速失败ip: " + vpsEntityOptional);
+//                }
+//            }
+//            }
+//        });
+//        return Result.ok();
+//    }
+    public Result<String> reconnectionServer(@RequestBody FollowTestServerVO followTestServerVO, HttpServletRequest req) {
+        log.info("重新连接服务器账号:{}", req);
+        // 创建一个线程池
+        ExecutorService executorService = Executors.newFixedThreadPool(10);
+        // 使用 CompletableFuture 处理每个 VPS
+        List<CompletableFuture<Void>> futures = new ArrayList<>();
         followTestServerVO.getVpsNameList().forEach(vps -> {
-//            Optional<FollowVpsEntity> vpsEntityOptional = followVpsService.list().stream()
-//                    .filter(vpsEntity -> vpsEntity.getName().equals(vps) && vpsEntity.getDeleted() == 0)
-//                    .findFirst();
-            //根据名称查询 IP 地址
-            LambdaQueryWrapper<FollowVpsEntity> queryWrapper = new LambdaQueryWrapper<>();
-            queryWrapper.eq(FollowVpsEntity::getName, vps);
-            queryWrapper.eq(FollowVpsEntity::getDeleted, 0);
-            List<FollowVpsEntity> vpsEntityOptionals = followVpsService.list(queryWrapper);
-            if (ObjectUtil.isNotEmpty(vpsEntityOptionals)){
+            CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
+                try {
+                    // 根据名称查询 IP 地址
+                    LambdaQueryWrapper<FollowVpsEntity> queryWrapper = new LambdaQueryWrapper<>();
+                    queryWrapper.eq(FollowVpsEntity::getName, vps);
+                    queryWrapper.eq(FollowVpsEntity::getDeleted, 0);
+                    List<FollowVpsEntity> vpsEntityOptionals = followVpsService.list(queryWrapper);
 
-            FollowVpsEntity vpsEntityOptional = vpsEntityOptionals.getFirst();
-            log.info("vpsEntityOptional:{}", vpsEntityOptional);
-            if (ObjectUtil.isNotEmpty(vpsEntityOptional)) {
-                String url = MessageFormat.format("http://{0}:{1}{2}", vpsEntityOptional.getIpAddress(), FollowConstant.VPS_PORT, FollowConstant.VPS_RECONNECTION);
-                String serverName = followTestServerVO.getServerName();
-                RestTemplate restTemplate = new RestTemplate();
-                HttpHeaders headers = RestUtil.getHeaderApplicationJsonAndToken(req);
-                HttpEntity<String> entity = new HttpEntity<>(serverName, headers);
-                ResponseEntity<JSONObject> response = restTemplate.exchange(url, HttpMethod.POST, entity, JSONObject.class);
-                log.info("测速请求:" + response.getBody());
+                    if (ObjectUtil.isNotEmpty(vpsEntityOptionals)) {
+                        FollowVpsEntity vpsEntityOptional = vpsEntityOptionals.get(0); // 获取第一个 VPS 实体
+                        log.info("vpsEntityOptional:{}", vpsEntityOptional);
 
-                if (!response.getBody().getString("msg").equals("success")) {
-                    log.error("测速失败ip: " + vpsEntityOptional);
+                        if (ObjectUtil.isNotEmpty(vpsEntityOptional)) {
+                            String url = MessageFormat.format("http://{0}:{1}{2}",
+                                    vpsEntityOptional.getIpAddress(),
+                                    FollowConstant.VPS_PORT,
+                                    FollowConstant.VPS_RECONNECTION);
+
+                            String serverName = followTestServerVO.getServerName();
+                            RestTemplate restTemplate = new RestTemplate();
+                            HttpHeaders headers = RestUtil.getHeaderApplicationJsonAndToken(req);
+                            HttpEntity<String> entity = new HttpEntity<>(serverName, headers);
+
+                            ResponseEntity<JSONObject> response = restTemplate.exchange(url, HttpMethod.POST, entity, JSONObject.class);
+                            log.info("测速请求:" + response.getBody());
+
+                            if (!response.getBody().getString("msg").equals("success")) {
+                                log.error("测速失败ip: " + vpsEntityOptional);
+                            }
+                        }
+                    }
+                } catch (Exception e) {
+                    log.error("连接失败 vps: " + vps, e);
                 }
-            }
-            }
+            }, executorService);
+
+            futures.add(future);
         });
+        // 等待所有任务完成
+        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+        // 关闭线程池
+        executorService.shutdown();
         return Result.ok();
     }
-
     @DeleteMapping("deleteServer")
     @Operation(summary = "删除服务器")
     @PreAuthorize("hasAuthority('mascontrol:speed')")
